--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Nuke SELSTRAOLS</title>
-        <link rel="icon" type="image/x-icon" href="nuke-favicon.png" />
+        <link rel="icon" type="image/x-icon" href="images/nuke-favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
