Color Can now Be changed to Yellow
change color to yellow temporarily using code ''3300''

--- a/index.html
+++ b/index.html
@@ -145,12 +145,13 @@
                         code.innerHTML + button.innerHTML;
                 });
             } ty trig!!!*/
-            
-            var funnynum = "69"
-            var secretmessage = "8607"
-            var standard = "0000"
-            var vorticeapp = "1567"
-            var calendar = "4713"
+
+            var funnynum = "69";
+            var secretmessage = "8607";
+            var standard = "0000";
+            var vorticeapp = "1567";
+            var calendar = "4713";
+            var colortoyellow = "3300";
 
             function clear() {
                 document.getElementById("displayPanel").value = "";
@@ -198,12 +199,25 @@
                                         "https://ccsdschools.instructure.com/calendar/"
                                     );
                                 } else {
-                                    document.getElementById(
-                                        "displayPanel"
-                                    ).style.color = "red";
-                                    document.getElementById(
-                                        "displayPanel"
-                                    ).value = "incorrect";
+                                    if (
+                                        document
+                                            .getElementById("displayPanel")
+                                            .value.includes("3300")
+                                    ) {
+                                        document.getElementById(
+                                            "displayPanel"
+                                        ).style.color = "yellow";
+                                        document.getElementById(
+                                            "displayPanel"
+                                        ).value = "";
+                                    } else {
+                                        document.getElementById(
+                                            "displayPanel"
+                                        ).style.color = "red";
+                                        document.getElementById(
+                                            "displayPanel"
+                                        ).value = "incorrect";
+                                    }
                                 }
                             }
                         }
