"incorrect" Now Auto-Revomes when clicking the button a second time
bonus: font is red!
so now you can turn font:
* green
* yellow
* red
cool right!

--- a/index.html
+++ b/index.html
@@ -211,12 +211,22 @@
                                             "displayPanel"
                                         ).value = "";
                                     } else {
-                                        document.getElementById(
-                                            "displayPanel"
-                                        ).style.color = "red";
-                                        document.getElementById(
-                                            "displayPanel"
-                                        ).value = "incorrect";
+                                        if ( //incorrect message clearer
+                                            document
+                                                .getElementById("displayPanel")
+                                                .value.includes("incorrect")
+                                        ) {
+                                            document.getElementById(
+                                                "displayPanel"
+                                            ).value = "";
+                                        } else {
+                                            document.getElementById(
+                                                "displayPanel"
+                                            ).style.color = "red";
+                                            document.getElementById(
+                                                "displayPanel"
+                                            ).value = "incorrect";
+                                        }
                                     }
                                 }
                             }
