Added Hover For Buttons

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             overflow: hidden;
         }
         .nukebutton {
+            transition: background 0.1s ease-in-out;
             height: 100px;
             width: 100px;
             font-size: 50px;
@@ -37,6 +38,10 @@
             font-family: "Press Start 2P", system-ui;
             font-weight: 400;
             font-style: normal;
+        }
+        .nukebutton:hover {
+            background: lawngreen;
+            color: black;
         }
         .display {
             background-color: black;
