--- a/index.html
+++ b/index.html
@@ -6,56 +6,55 @@
         <link rel="icon" type="image/x-icon" href="images/nuke-favicon.png" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
-            rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
+
+        <style>
+            button {
+                text-align: center;
+            }
+            h1 {
+                color: lawngreen;
+            }
+            p {
+                color: lawngreen;
+            }
+            body {
+                background-color: black;
+                height: 100vh;
+                width: 100vw;
+                position: fixed;
+                overflow: hidden;
+            }
+            .nukebutton {
+                transition: background 0.1s ease-in-out;
+                height: 100px;
+                width: 100px;
+                font-size: 50px;
+                background-color: black;
+                border-color: lawngreen;
+                color: lawngreen;
+                font-family: "Press Start 2P", system-ui;
+                font-weight: 400;
+                font-style: normal;
+            }
+            .nukebutton:hover {
+                background: lawngreen;
+                color: black;
+            }
+            .display {
+                background-color: black;
+                color: lawngreen;
+                height: 100px;
+                width: 307px;
+                font-size: 50px;
+            }
+            .press-start-2p-regular {
+                font-family: "Press Start 2P", system-ui;
+                font-weight: 400;
+                font-style: normal;
+            }
+        </style>
     </head>
-    <style>
-        button {
-            text-align: center;
-        }
-        h1 {
-            color: lawngreen;
-        }
-        p {
-            color: lawngreen;
-        }
-        body {
-            background-color: black;
-            height: 100vh;
-            width: 100vw;
-            position: fixed;
-            overflow: hidden;
-        }
-        .nukebutton {
-            transition: background 0.1s ease-in-out;
-            height: 100px;
-            width: 100px;
-            font-size: 50px;
-            background-color: black;
-            border-color: lawngreen;
-            color: lawngreen;
-            font-family: "Press Start 2P", system-ui;
-            font-weight: 400;
-            font-style: normal;
-        }
-        .nukebutton:hover {
-            background: lawngreen;
-            color: black;
-        }
-        .display {
-            background-color: black;
-            color: lawngreen;
-            height: 100px;
-            width: 307px;
-            font-size: 50px;
-        }
-        .press-start-2p-regular {
-            font-family: "Press Start 2P", system-ui;
-            font-weight: 400;
-            font-style: normal;
-        }
-    </style>
     <body style="text-align: center">
         <h1 class="press-start-2p-regular">Launch Code Simulator</h1>
         <textarea
@@ -138,10 +137,8 @@
             'displayPanel').value = displayPanel.value + '0'">
             0
         </button>
-        <button class="nukebutton" class="gobutton" onclick="run()">></button>
-        <p class="press-start-2p-regular">
-            super effective launch system to rule all other launch systems*
-        </p>
+        <button class="nukebutton gobutton" onclick="run()">&gt;</button>
+        <p class="press-start-2p-regular">super effective launch system to rule all other launch systems*</p>
         <p class="press-start-2p-regular">(its 4 digit codes btw)</p>
         <script>
             /*const buttons = document.getElementById("displayPanel");
@@ -169,132 +166,46 @@
             }
 
             function run() {
-                if (
-                    document.getElementById("displayPanel").value.includes("69")
-                ) {
+                if (document.getElementById("displayPanel").value.includes("69")) {
                     document.getElementById("displayPanel").style.color = "red";
                     document.getElementById("displayPanel").value = "pls no";
-                } else {
-                    if (
-                        document
-                            .getElementById("displayPanel")
-                            .value.includes("8607")
-                    ) {
-                        document.getElementById("displayPanel").style.color =
-                            "skyblue";
+                } else if {
+                     (document.getElementById("displayPanel").value.includes("8607")) {
+                        document.getElementById("displayPanel").style.color = "skyblue";
                         document.getElementById("displayPanel").value = "";
                         /*"hi maya, speak to me in bio today, ok!";*/
-                    } else {
-                        if (
-                            document
-                                .getElementById("displayPanel")
-                                .value.includes("0000")
-                        ) {
+                } else if {
+                        (document.getElementById("displayPanel").value.includes("0000")) {
                             window.location.replace("https://www.google.com/");
-                        } else {
-                            if (
-                                document
-                                    .getElementById("displayPanel")
-                                    .value.includes("1567")
-                            ) {
-                                window.location.replace(
-                                    "https://www.vortice.app/"
-                                );
-                            } else {
-                                if (
-                                    document
-                                        .getElementById("displayPanel")
-                                        .value.includes("4713")
-                                ) {
-                                    window.location.replace(
-                                        "https://ccsdschools.instructure.com/calendar/"
-                                    );
-                                } else {
-                                    if (
-                                        document
-                                            .getElementById("displayPanel")
-                                            .value.includes("3300")
-                                    ) {
-                                        document.getElementById(
-                                            "displayPanel"
-                                        ).style.color = "yellow";
-                                        document.getElementById(
-                                            "displayPanel"
-                                        ).value = "";
-                                    } else {
-                                        if (
-                                            //incorrect message clearer
-                                            document
-                                                .getElementById("displayPanel")
-                                                .value.includes("incorrect")
-                                        ) {
-                                            document.getElementById(
-                                                "displayPanel"
-                                            ).value = "";
-                                        } else {
-                                            if (
-                                                document
-                                                    .getElementById(
-                                                        "displayPanel"
-                                                    )
-                                                    .value.includes("8738")
-                                            ) {
-                                                document.getElementById(
-                                                    "displayPanel"
-                                                ).style.color = "skyblue";
-                                                document.getElementById(
-                                                    "displayPanel"
-                                                ).value = "";
-                                            } else {
-                                                if (
-                                                    document
-                                                        .getElementById(
-                                                            "displayPanel"
-                                                        )
-                                                        .value.includes("1985")
-                                                ) {
-                                                    document.getElementById(
-                                                        "displayPanel"
-                                                    ).style.color = "orange";
-                                                    document.getElementById(
-                                                        "displayPanel"
-                                                    ).value =
-                                                        "The Enterprise is coming!";
-                                                } else {
-                                                    if (
-                                                        document
-                                                            .getElementById(
-                                                                "displayPanel"
-                                                            )
-                                                            .value.includes(
-                                                                "1111"
-                                                            )
-                                                    ) {
-                                                        document.getElementById(
-                                                            "displayPanel"
-                                                        ).style.color =
-                                                            "lawngreen";
-                                                        document.getElementById(
-                                                            "displayPanel"
-                                                        ).value =
-                                                            "This website is hereby endorsed to nova labs, vortice, and any other website or corperation affiliated with nova labs or vortice.";
-                                                    } else {
-                                                        document.getElementById(
-                                                            "displayPanel"
-                                                        ).style.color = "red";
-                                                        document.getElementById(
-                                                            "displayPanel"
-                                                        ).value = "incorrect";
-                                                    }
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
+                } else if {
+                        (document.getElementById("displayPanel").value.includes("1567")) {
+                            window.location.replace("https://www.vortice.app/");
+                } else if {
+                        (document.getElementById("displayPanel").value.includes("4713")) {
+                            window.location.replace("https://ccsdschools.instructure.com/calendar/");
+                } else if {
+                        (document.getElementById("displayPanel").value.includes("3300")) {
+                            document.getElementById("displayPanel").style.color = "yellow";
+                            document.getElementById("displayPanel").value = "";
+                } else if {
+                        (document.getElementById("displayPanel").value.includes("incorrect")) {
+                            document.getElementById("displayPanel").value = "";
+                } else if {
+                        (document.getElementById("displayPanel").value.includes("8738")) {
+                            document.getElementById("displayPanel").style.color = "skyblue";
+                            document.getElementById("displayPanel").value = "";
+                } else if {
+                        (document.getElementById("displayPanel").value.includes("1985")) {
+                            document.getElementById("displayPanel").style.color = "orange";
+                            document.getElementById("displayPanel").value = "The Enterprise is coming!";
+                } else if {
+                        (document.getElementById("displayPanel").value.includes("1111")) {
+                            document.getElementById("displayPanel").style.color = "lawngreen";
+                            document.getElementById("displayPanel").value = "This website is hereby endorsed to nova labs, vortice, and any other website or corperation affiliated with nova labs or vortice.";
+                } else {
+                        document.getElementById("displayPanel").style.color = "red";
+                        document.getElementById("displayPanel").value = "incorrect";
+                }}}}}}}}}}
             }
         </script>
     </body>
