--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                     },
                     incorrect: () => {
                         displayPanel.value = "";
+                        displayPanel.fontSize = "50px";
                     },
                     8738: () => {
                         displayPanel.style.color = "skyblue";
@@ -206,6 +207,10 @@
                         displayPanel.style.color = "lawngreen";
                         displayPanel.value =
                             "This website is hereby endorsed to nova labs, vortice, and any other website or corporation affiliated with nova labs or vortice.";
+                    },
+                    2957: () => {
+                        displayPanel.style.color = "purple";
+                        displayPanel.value = "When should I update next?";
                     }
                 };
 
