--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
                     2957: () => {
                         displayPanel.style.color = "purple";
                         displayPanel.value = "When should I update next?";
+                    },
+                    1852: () => {
+                        window.location.replace("./IMMORTALIZE_TRIG.html");
                     }
                 };
 
